--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,14 @@
-
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
+/* Add this rule to set the background color */
+body {
+  background-color: #212121; /* Change to your desired color */
+}
+.welcome-title {
+  color: #b4b4b4;
+  font-family: "Calibri", sans-serif;
+}
